--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# App port
+GATEWAY_PORT=3000
+USERS_PORT=3001
+PAYMENTS_PORT=3002
 #Mysql Configuration
 MYSQL_ROOT_PASSWORD=root@123
 MYSQL_DATABASE=n-users
