--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,14 @@
 GATEWAY_PORT=3000
 USERS_PORT=3001
 PAYMENTS_PORT=3002
+# CRYPTO Configuration
+SALT_OR_ROUNDS=10
 #Mysql Configuration
+USERS_DB_TYPE=mysql
+USERS_DB_HOST=localhost
 MYSQL_ROOT_PASSWORD=root@123
 MYSQL_DATABASE=n-users
 MYSQL_USER=usermain
-MYSQL_PASSWORD=usermain@123
 MYSQL_PASSWORD=usermain@123
 MYSQL_PORT=3306
 MYSQL_PORT_M=3306
