--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:user": "nest start users --watch",
+    "start:payment": "nest start payment --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/training-project/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
